--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Hello, world! I'm Ioannis Demetriades
+title: Ioannis Demetriade's Portfolio
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "https://ioannisdem.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
@@ -17,9 +17,6 @@ social-facebook: # add your Facebook handle
 social-github: IoannisDem # add your Github handle
 social-linkedin: ioannisdemetriades # add your Linkedin handle
 social-email: ioannisdem2000@gmail.com # add your Email address
-
-# Disqus
-discus-identifier: mr-brown # add your discus identifier
 
 # Tracker
 analytics: # Google Analytics
